feat: temporary commit for asking claude

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,8 @@ services:
       --default-authentication-plugin=mysql_native_password
     volumes:
       - ./data/mysql-master/:/var/lib/mysql
-      - ./init/init-master.sql:/docker-entrypoint-initdb.d/init-master.sql
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql
+      - ./init/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./init/default-member.sql:/docker-entrypoint-initdb.d/01-default-member.sql
     networks:
       - mysqlnet
 
@@ -50,8 +50,8 @@ services:
       - mysql-master
     volumes:
       - ./data/mysql-slave/:/var/lib/mysql
-      - ./init/init-slave.sh:/docker-entrypoint-initdb.d/init-slave.sh
-      - ./src/main/resources/schema.sql:/docker-entrypoint-initdb.d/01-schema.sql
+      - ./init/local/init-slave.sh:/docker-entrypoint-initdb.d/init-slave.sh
+      - ./init/default-member.sql:/docker-entrypoint-initdb.d/01-default-member.sql
     networks:
       - mysqlnet
 
