--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,6 @@
 spring:
+  activate:
+    on-profile: local
   datasource:
     master:
       url: jdbc:mysql://localhost:3306/grindelwald?characterEncoding=UTF-8&serverTimezone=UTC
