--- a/docker-compose-for-integration-test.yml
+++ b/docker-compose-for-integration-test.yml
@@ -1,17 +1,16 @@
 version: '3'
 services:
-  mysql-master:
+  mysql-test-master:
     image: mysql:8.0
-    container_name: mysql-master
     ports:
-      - "3306:3306"
+      - "3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=application
-      - MYSQL_PASSWORD=application
+      - MYSQL_ROOT_PASSWORD=test
+      - MYSQL_USER=test
+      - MYSQL_PASSWORD=test
       - MYSQL_DATABASE=grindelwald
-      - MYSQL_REPLICATION_USER=repl
-      - MYSQL_REPLICATION_PASSWORD=replpass
+      - MYSQL_REPLICATION_USER=test
+      - MYSQL_REPLICATION_PASSWORD=test
     command:
       --server-id=1
       --log-bin=mysql-bin
@@ -20,24 +19,23 @@ services:
       --enforce-gtid-consistency=ON
       --default-authentication-plugin=mysql_native_password
     volumes:
-      - ./data/mysql-master/:/var/lib/mysql
-      - ./init/schema.sql:/docker-entrypoint-initdb.d/schema.sql
+      - ./data/mysql-test-master/:/var/lib/mysql
+      - ./init/schema.sql:/docker-entrypoint-initdb.d/00-init-master.sql
       - ./init/default-member.sql:/docker-entrypoint-initdb.d/01-default-member.sql
     networks:
       - mysqlnet
 
-  mysql-slave:
+  mysql-test-slave:
     image: mysql:8.0
-    container_name: mysql-slave
     ports:
-      - "3307:3306"
+      - "3306"
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_USER=application
-      - MYSQL_PASSWORD=application
+      - MYSQL_ROOT_PASSWORD=test
+      - MYSQL_USER=test
+      - MYSQL_PASSWORD=test
       - MYSQL_DATABASE=grindelwald
-      - MYSQL_REPLICATION_USER=repl
-      - MYSQL_REPLICATION_PASSWORD=replpass
+      - MYSQL_REPLICATION_USER=test
+      - MYSQL_REPLICATION_PASSWORD=test
     command:
       --server-id=2
       --relay-log=relay-log
@@ -47,11 +45,10 @@ services:
       --enforce-gtid-consistency=ON
       --default-authentication-plugin=mysql_native_password
     depends_on:
-      - mysql-master
+      - mysql-test-master
     volumes:
-      - ./data/mysql-slave/:/var/lib/mysql
-      - ./init/local/init-slave.sh:/docker-entrypoint-initdb.d/init-slave.sh
-      - ./init/default-member.sql:/docker-entrypoint-initdb.d/01-default-member.sql
+      - ./data/mysql-test-slave/:/var/lib/mysql
+      - ./init/test/init-slave.sh:/docker-entrypoint-initdb.d/00-init-slave.sh
     networks:
       - mysqlnet
 
