--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -18,3 +18,8 @@ spring:
       hikari:
         pool-name: HangHaePlusHikariCP-slave
         maximum-pool-size: 3
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 1s
