feat: update integration tests to use SqlGroup for setup and cleanup scripts

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   jpa:
     open-in-view: false
     show-sql: false
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
       ddl-auto: none
     properties:
