feat: adding a hibernate default batch fetch size.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ spring:
     properties:
       hibernate.timezone.default_storage: NORMALIZE_UTC
       hibernate.jdbc.time_zone: UTC
+      hibernate:
+        default_batch_fetch_size: 100
 
 kafka:
   group-id: "virtual-2-commerce-group"
